Knowledge-Board/src/main/java/com/example/knowledgeboard/global/error/BusinessException.java
package com.example.knowledgeboard.global.error;

import lombok.Getter;
import lombok.RequiredArgsConstructor;

@Getter
@RequiredArgsConstructor
public class BusinessException extends RuntimeException {

    private final ErrorCode errorCode;

}